@@ -1,8 +1,12 @@
 # ChangeLog for media-gfx/iv
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
 # Maintainer: George Shapovalov <george@gentoo.org>
-# $Header: /var/cvsroot/gentoo-x86/media-gfx/iv/Attic/ChangeLog,v 1.1 2002/05/16 04:46:37 george Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-gfx/iv/Attic/ChangeLog,v 1.2 2002/05/17 04:44:13 george Exp $
 
+	16 May 2002; George Shapovalov <george@gentoo.org> iv-0.1.9.ebuild :
+
+	updated DEPEND entry per Pedro Fiol's clarification
+	
 *iv-0.1.9 (15 May 2002)
 
 	15 May 2002; George Shapovalov <george@gentoo.org> iv-0.1.9.ebuild,Changelog,files/digest-iv-0.1.9 :
